--- a/build.gradle
+++ b/build.gradle
@@ -16,19 +16,22 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.4.5'
-        classpath 'com.trevorism:gradle-acceptance-plugin:2.2.0'
+        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.8.0'
+        classpath 'com.trevorism:gradle-acceptance-plugin:2.7.2'
     }
 }
 
 plugins {
     id "groovy"
-    id "war"
+    id("com.github.johnrengelman.shadow") version "8.1.1"
+    id("io.micronaut.application") version "4.3.8"
     id "jacoco"
 }
 
 apply plugin: 'com.google.cloud.tools.appengine'
 apply plugin: "com.trevorism.gradle.acceptance"
+
+group = "com.trevorism"
 
 repositories {
     mavenCentral()
@@ -38,36 +41,78 @@ repositories {
     }
 }
 
-def jerseyVersion = "2.38"
-
 dependencies {
-    implementation 'org.codehaus.groovy:groovy-all:2.5.19'
+    annotationProcessor("io.micronaut.validation:micronaut-validation-processor")
 
-    implementation "org.glassfish.jersey.containers:jersey-container-servlet:$jerseyVersion"
-    implementation "org.glassfish.jersey.media:jersey-media-json-jackson:$jerseyVersion"
-    implementation "org.glassfish.jersey.inject:jersey-hk2:$jerseyVersion"
-    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.14.0'
+    implementation("io.micronaut.groovy:micronaut-runtime-groovy")
+    implementation("io.micronaut:micronaut-jackson-databind")
+    implementation("io.micronaut.security:micronaut-security")
+    runtimeOnly("org.yaml:snakeyaml")
 
-    implementation 'org.slf4j:slf4j-nop:1.7.36'
-    implementation 'io.swagger:swagger-jersey2-jaxrs:1.6.8'
+    implementation("jakarta.annotation:jakarta.annotation-api")
+    implementation 'io.projectreactor:reactor-core:3.6.5'
 
-    implementation 'com.trevorism:secure-http-utils:1.0.0'
-    implementation 'com.trevorism:schedule-client:0.7.0'
-    implementation 'com.trevorism:datastore-client:2.7.0'
+    implementation("io.swagger.core.v3:swagger-annotations")
+    compileOnly("io.micronaut.openapi:micronaut-openapi"){
+        exclude module:"slf4j-nop"
+    }
 
-    acceptanceImplementation 'io.cucumber:cucumber-groovy:4.7.1'
-    testImplementation 'junit:junit:4.13.2'
+    runtimeOnly("ch.qos.logback:logback-classic")
+
+    implementation ('com.trevorism:micronaut-utility-beans:1.3.0'){
+        exclude module:"slf4j-nop"
+        exclude module:"slf4j-simple"
+    }
+    implementation 'com.trevorism:schedule-client:0.9.0'
+    implementation ('com.trevorism:datastore-client:3.2.0'){
+        exclude module:"slf4j-nop"
+    }
+
+    testImplementation 'com.trevorism:test-result-events:0.3.0'
+    acceptanceImplementation 'io.cucumber:cucumber-groovy:6.10.4'
+}
+
+application {
+    mainClass.set("com.trevorism.Application")
+}
+
+graalvmNative.toolchainDetection = false
+micronaut {
+    runtime("netty")
+    testRuntime("junit5")
+    processing {
+        incremental(true)
+        annotations("com.trevorism.*")
+    }
+}
+
+tasks.withType(GroovyCompile) {
+    groovyOptions.forkOptions.jvmArgs.add('-Dgroovy.parameters=true')
+    groovyOptions.forkOptions.jvmArgs.add('-Dmicronaut.openapi.views.spec=rapidoc.enabled=false,swagger-ui.enabled=true,swagger-ui.theme=flattop')
 }
 
 appengine {
+    stage.artifact = layout.buildDirectory.file("libs/${project.name}-all.jar")
     deploy {
         projectId = "trevorism-testing"
         stopPreviousVersion = true
         promote = true
-        version = "0-1-0"
+        version = "0-2-0"
     }
 }
 
-check {
-    dependsOn('jacocoTestReport')
+test {
+    systemProperty ("trevorism.test.event", findProperty("trevorism.test.event") == "enabled" ? project.name : null)
 }
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                minimum = 0.1
+            }
+        }
+    }
+}
+
+build.dependsOn jacocoTestCoverageVerification
