--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     runtimeOnly("org.yaml:snakeyaml")
 
     implementation("jakarta.annotation:jakarta.annotation-api")
-    implementation 'io.projectreactor:reactor-core:3.6.5'
+    implementation 'io.projectreactor:reactor-core:3.6.8'
 
     implementation("io.swagger.core.v3:swagger-annotations")
     compileOnly("io.micronaut.openapi:micronaut-openapi"){
@@ -59,14 +59,8 @@ dependencies {
 
     runtimeOnly("ch.qos.logback:logback-classic")
 
-    implementation ('com.trevorism:micronaut-utility-beans:1.3.0'){
-        exclude module:"slf4j-nop"
-        exclude module:"slf4j-simple"
-    }
-
-    implementation ('com.trevorism:datastore-client:3.2.0'){
-        exclude module:"slf4j-nop"
-    }
+    implementation ('com.trevorism:micronaut-utility-beans:1.6.0')
+    implementation ('com.trevorism:datastore-client:4.1.0')
     implementation 'com.trevorism:schedule-client:1.0.0'
 
     testImplementation 'com.trevorism:test-result-events:0.3.0'
@@ -98,7 +92,7 @@ appengine {
         projectId = "trevorism-testing"
         stopPreviousVersion = true
         promote = true
-        version = "0-4-0"
+        version = "0-5-0"
     }
 }
 
