--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.8.0'
+        classpath 'com.google.cloud.tools:appengine-gradle-plugin:2.8.3'
         classpath 'com.trevorism:gradle-acceptance-plugin:2.7.2'
     }
 }
@@ -24,7 +24,7 @@ buildscript {
 plugins {
     id "groovy"
     id("com.github.johnrengelman.shadow") version "8.1.1"
-    id("io.micronaut.application") version "4.3.8"
+    id("io.micronaut.application") version "4.4.4"
     id "jacoco"
 }
 
@@ -50,7 +50,7 @@ dependencies {
     runtimeOnly("org.yaml:snakeyaml")
 
     implementation("jakarta.annotation:jakarta.annotation-api")
-    implementation 'io.projectreactor:reactor-core:3.6.9'
+    implementation 'io.projectreactor:reactor-core:3.7.1'
 
     implementation("io.swagger.core.v3:swagger-annotations")
     compileOnly("io.micronaut.openapi:micronaut-openapi"){
@@ -59,8 +59,8 @@ dependencies {
 
     runtimeOnly("ch.qos.logback:logback-classic")
 
-    implementation ('com.trevorism:micronaut-utility-beans:1.6.0')
-    implementation ('com.trevorism:datastore-client:4.1.0')
+    implementation 'com.trevorism:micronaut-utility-beans:1.6.0'
+    implementation 'com.trevorism:datastore-client:4.1.0'
     implementation 'com.trevorism:schedule-client:1.0.0'
 
     testImplementation 'com.trevorism:test-result-events:0.3.0'
